--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "ng test",
     "test:headless": "ng test --watch=false --browsers=ChromeHeadless",
     "coverage": "ng test --no-watch --code-coverage",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "serve:ssr:angular-starter": "node dist/angular-starter/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -19,9 +20,12 @@
     "@angular/core": "20.0.1",
     "@angular/forms": "20.0.1",
     "@angular/platform-browser": "20.0.1",
+    "@angular/platform-server": "^20.0.1",
     "@angular/router": "20.0.1",
+    "@angular/ssr": "^20.0.3",
     "@fortawesome/fontawesome-free": "6.7.2",
     "bootstrap": "5.3.6",
+    "express": "^5.1.0",
     "rxjs": "7.8.2",
     "tslib": "2.8.1",
     "zone.js": "0.15.1"
@@ -30,7 +34,9 @@
     "@angular/build": "20.0.1",
     "@angular/cli": "20.0.1",
     "@angular/compiler-cli": "20.0.1",
+    "@types/express": "^5.0.3",
     "@types/jasmine": "5.1.8",
+    "@types/node": "^20.19.1",
     "angular-eslint": "19.7.1",
     "eslint": "9.28.0",
     "jasmine-core": "5.7.1",
