--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/forms": "20.0.1",
     "@angular/platform-browser": "20.0.1",
     "@angular/router": "20.0.1",
+    "@angular/service-worker": "20.0.1",
     "@fortawesome/fontawesome-free": "6.7.2",
     "bootstrap": "5.3.6",
     "rxjs": "7.8.2",
