--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "20.0.3",
     "@angular/platform-server": "20.0.3",
     "@angular/router": "20.0.3",
+    "@angular/service-worker": "20.0.3",
     "@angular/ssr": "20.0.2",
     "@fortawesome/fontawesome-free": "6.7.2",
     "bootstrap": "5.3.6",
