--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "20.0.3",
     "@angular/platform-server": "20.0.3",
     "@angular/router": "20.0.3",
+    "@angular/ssr": "20.0.2",
     "@angular/service-worker": "20.0.3",
     "@angular/ssr": "20.0.2",
     "@fortawesome/fontawesome-free": "6.7.2",
@@ -36,7 +37,7 @@
     "@angular/cli": "20.0.2",
     "@angular/compiler-cli": "20.0.3",
     "@types/express": "5.0.3",
-    "@types/jasmine": "^5.1.8",
+    "@types/jasmine": "5.1.8",
     "@types/node": "24.0.1",
     "angular-eslint": "20.0.0",
     "eslint": "9.29.0",
